k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qwikbrew-ingress
  namespace: qwikbrew
  annotations:
    kubernetes.io/ingress.class:                            alb
    alb.ingress.kubernetes.io/scheme:                       internet-facing
    alb.ingress.kubernetes.io/target-type:                  ip
    alb.ingress.kubernetes.io/listen-ports:                 '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect:                 "443"
    alb.ingress.kubernetes.io/certificate-arn:              "CERT_ARN"
    alb.ingress.kubernetes.io/healthcheck-path:             /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/group.name:                   qwikbrew
spec:
  ingressClassName: alb
  rules:
    # Allow direct ALB DNS access (no Host header match required)
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: api-gateway, port: { number: 80 } }
    - host: api.qwikbrew.in
      http:
        paths:
          - path:     /
            pathType: Prefix
            backend:
              service: { name: api-gateway, port: { number: 80 } }
